--- a/custom_components/genie/manifest.json
+++ b/custom_components/genie/manifest.json
@@ -2,6 +2,7 @@
   "domain": "genie",
   "name": "Genie Device",
   "version": "1.0.0",
+  "documentation": "https://github.com/soniritesh124/genie-integration",
   "requirements": [],
   "iot_class": "local_polling"
 }
